# OOP_labs

./: README.md
Lab1/: CMakeLists.txt
Lab1/src/: number_to_turkish.cpp  number_to_turkish.h  solution.cpp
Lab1/tests/: test_number_to_turkish.cpp
Lab2/: CMakeLists.txt
Lab2/src/: solution.cpp  three.cpp  three.h
Lab2/tests/: test_three.cpp
Lab3/: CMakeLists.txt
Lab3/src/: figure.cpp  figure.h  solution.cpp
Lab3/tests/: test_figures.cpp
Lab4/: CMakeLists.txt
Lab4/src/: figure.cpp  figure.h  solution.cpp
Lab4/tests/: test_figures.cpp
Lab5/: CMakeLists.txt  main.cpp
Lab5/src/: bidirectional_list.h  memory_resource.h
Lab5/tests/: tests.cpp
Lab6/: CMakeLists.txt  main.cpp  tests.cpp
Lab6/input/: dragon.h  npc.h  observer.h  pegas.h
Lab6/src/: dragon.cpp  knight.cpp  npc.cpp
Lab7/: CMakeLists.txt  main.cpp  tests.cpp
Lab7/input/: dragon.hpp  knight.hpp  npc.hpp  pegas.hpp
Lab7/src/: dragon.cpp  knight.cpp  npc.cpp  pegas.cpp
input/: knight.h
src/: observer.cpp  pegas.cpp
